--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: currency-exchange
-        image: in28min/currency-exchange-devops
+        image: ramakrishnar2/currency-exchange:0.0.1.RELEASE
         imagePullPolicy: IfNotPresent
         ports:
         - name: liveness-port
